# gitjudge

./: .gitignore  TODO.md  pyproject.toml  requeriments.txt  setup.cfg
gitjudge/: git_practice.py  gitjudge.py
gitjudge/common/: utils.py
gitjudge/entity/: __init__.py  checkresult.py  checks.py  commit.py  commit_definition.py  definition.py  diffindex.py  difflist.py  expected_commit.py  log_options.py  reference_resolver.py  repository.py  validator.py
gitjudge/entity/checks/: __init__.py  branch_check.py  check.py  cherry_pick_check.py  diff_check.py  file_content_check.py  reverts_check.py  squash_check.py  tag_check.py
gitjudge/formatter/: __init__.py  formatter.py  stdout.py
gitjudge/mapper/: __init__.py  checks.py  commit_definition.py  definition.py  expected_commit.py  log_options.py
gitjudge/mapper/checks/: branch_check.py  checks.py  cherry_pick_check.py  diff_check.py  file_content_check.py  reverts_check.py  squash_check.py  tag_check.py
test/: conftest.py
test/entity/: test_commit.py  test_expected_commit.py
test/entity/checkresult/: test_checkresult.py  test_checkresult_cherrypick.py  test_checkresult_revert.py
test/entity/checks/: test_checks.py  test_checks_validate.py
test/entity/commit/: test_commit.py  test_commit_hash.py  test_commit_ischerrypicked.py  test_commit_reverts.py
test/entity/definition/: test_definition_constructor.py
test/entity/expected_commit/: test_expected_commit.py  test_expected_commit_validate.py
test/entity/log_options/: test_log_options.py
test/entity/repository/: test_repository_constructor.py  test_repository_findcommit.py  test_repository_log.py
test/entity/validator/: test_validator_constructor.py  test_validator_validate.py
test/mapper/: test_checks_mapper.py  test_definition_mapper.py  test_expected_commit_mapper.py  test_log_options_mapper.py
test/unit/entity/checks/: test_checks_validate.py  test_checks_validate_cherrypick.py  test_checks_validate_reverts.py
test/unit/mapper/: test_checks_mapper.py  test_definition_mapper.py
tests/: conftest.py
tests/unit/mapper/: _test_checks_diff_mapper.py  test_commit_definition_mapper.py  test_definition_mapper.py  test_log_options_mapper.py
(+52 files in other folders)
