[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitjudge"
dynamic = ["version"]
description = "CLI Judge to validate git repositories"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Joan Puigcerver", email = "joapuiib@gmail.com" },
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "GitPython>=3.1.26",
    "colorama>=0.4.4",
    "pyyaml",
]

[project.scripts]
gitjudge = "gitjudge.gitjudge:main"

[project.urls]
Documentation = "https://joapuiib.github.io/gitjudge"
Download = "https://github.com/joapuiib/gitjudge/releases"
Homepage = "https://joapuiib.github.io/gitjudge"
Source = "https://github.com/joapuiib/gitjudge"
Tracker = "https://github.com/joapuiib/gitjudge/issues"

[tool.hatch.version]
path = "gitjudge/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/gitjudge",
    "/tests",
]
[tool.hatch.build.targets.wheel]
exclude = ["/tests"]

[tool.hatch.envs.default.scripts]
all = [
    "hatch run test:test",
    "hatch run style:check",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pyfakefs",
]

[tool.hatch.envs.test.scripts]
test = [
    "pytest",
]

[tool.hatch.envs.doc]
dependencies = [
    "mkdocs-material[imaging]~=9.5",
    "mkdocs-alias-plugin~=0.8",
    "mkdocs-git-revision-date-localized-plugin~=1.2",
]

[tool.hatch.envs.doc.scripts]
serve = [
    "mkdocs serve",
]
build = [
    "mkdocs build",
]

[tool.hatch.envs.style]
detached = true
dependencies = [
    "black",
    "isort",
    "ruff",
]

[tool.hatch.envs.style.scripts]
check = [
    "isort --check-only --diff gitjudge",
    "black -q --check --diff gitjudge",
    "ruff check gitjudge",
]
format = [
    "isort -q gitjudge",
    "black -q gitjudge",
    "ruff format gitjudge",
]

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E501"]

